# NIFuzz

./: .gitignore  Cargo.toml  Dockerfile.cbmc  Dockerfile.fuzz  Dockerfile.interactive  Makefile.toml  README.md  run_cbmc_experiment.sh  run_fuzz_experiment.sh
LeakiEst-1.4.9/: configCrowds.txt  configDC.txt  configJavaScript.txt  configPassportBritish.txt  configPassportBritishFix.txt  configPassportGerman.txt  configPassportGermanFix.txt  configPassportIrish.txt  configPassportIrishFix.txt  configRandom.txt  configSecureRandom.txt  configTLS.txt  configTor.txt  javadoc.xml
LeakiEst-1.4.9/data/: JavaScriptFull.arff  RandomLowEny.java  SecRanLowEny.java  Tor.arff  crowds1.txt  crowds2.txt  crowds3.txt  crowds4.txt  crowds5.txt  java-random-lowentropy.txt  java-securerandom-lowentropy.txt  timesGerman500Random.txt  timesGerman500Related.txt  timesGreek500Dist.txt  timesGreek500DistFix.txt
LeakiEst-1.4.9/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  (+1 more)
atalk/: atalk.c  atalk.h  build.sh  fuzz.sh
benchmarks/: build_all.sh  fuzz_all.sh  generate_random.h  memory.c  memory.h
src/: IFSpec_banking_insecure.cpp  STADS.rs  combined_exec_main.rs  hypertest_feedback.rs  leak_fuzzer_mutational_stage.rs  leak_fuzzer_scheduler.rs  leak_fuzzer_state.rs  lib.rs  main.rs  output_feedback.rs  output_forkserver.rs  output_leak_fuzzer.rs  output_observer.rs  program.c  pub_sec_input.rs  pub_sec_mutational.rs  pub_sec_mutations.rs  pub_sec_scheduled_mutator.rs
(+230 files in other folders)
