[package]
name = "forkserver_libafl_cc"
version = "0.8.2"
authors = ["ergrelet <ergrelet@users.noreply.github.com>"]
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }

[dependencies]
# libafl = { path = "../../libafl/", features = ["default"] }
# libafl_targets = { path = "../../libafl_targets/" }
# libafl_cc = { path = "../../libafl_cc/" }
libafl = "0.11.1"
libafl_targets = "0.11.1"
libafl_cc = "0.11.1"
libafl_bolts = "0.11.1"
clap = { version = "4.0", features = ["derive"] }
nix = "0.26"
serde = "1.0.166"
hashbrown = "0.14.0"
nonblock = "0.2.0"
libc = "0.2.147"
log = "0.4.19"
ahash = "0.8.3"
base64 = "0.21.2"
serde_json = "1.0.102"
rand = "0.8.5"

[lib]
name = "libforkserver_libafl_cc"
crate-type = ["staticlib"]
